--- a/static/css/main.css
+++ b/static/css/main.css
@@ -26,9 +26,18 @@
     font-weight: 400;
 }
 
-.top-section .top-section-content {
+.top-section {
     position: relative;
     z-index: 1;
+} 
+
+.top-section-content {
+    position: relative;
+    z-index: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 100%;
 }
 
 .top-section:before {
@@ -48,6 +57,18 @@ section header h2{
     line-height: 4rem;
 }
 
+h3 {
+    font-family: 'Kanit';
+}
+
+h4 {
+    font-family: 'Kanit';
+}
+
+h5 {
+    font-family: 'Kanit';
+}
+
 section .main-body{
     font-size: 1.3rem;
     font-weight: 200;
@@ -62,8 +83,6 @@ section .main-body{
 .bg-gradient-primary-to-secondary-gray {
     background: linear-gradient(45deg, #f0f0f0, #f1f1f1) !important;
 }
-
-
 
 .on-top {
     position: relative;
@@ -113,13 +132,16 @@ section .main-body{
 }
 
 .project-card-col {
-    max-width: 500px;
-    margin-left: auto;
-    margin-right: auto;
+    /* max-width: 500px; */
+    /* margin-left: auto; */
+    /* margin-right: auto; */
     /* display: flex; */
+    /* padding: 0; */
 }
 
+
 .card {
+    height: 100%;
     border-radius: 1rem;
     border: none;
     transition: box-shadow 0.2s;
@@ -131,6 +153,7 @@ section .main-body{
     transform: translateY(-4px) scale(1.02);
 }
 .card-title {
+    font-family: 'Kanit';
     color: #3948d2;
     font-weight: 600;
     font-size: 1.25rem;
